Added modified time field to the request header (#81)
